fix minor display issue on IE8

--- a/htdocs/css/me.css
+++ b/htdocs/css/me.css
@@ -114,3 +114,6 @@ ul,ol#shopping_cart {
 span.expand,span.contract {
     cursor: pointer;
 }
+span.expand {
+    display:block;
+}
